<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IAESTE</string>

    <string name="errorcode_01">IO feil! Kode: 01</string>
    <string name="errorcode_02">Feil, ble ikke lagret!</string>
    <string name="errorcode_03">Ikke tilgang på internett, prøv igjen senere.</string>


    <string name="title_02">IAESTE Portalen</string>
    <string name="title_05">BK</string>


    <string-array name="url_list">
        <item>http://iaeste.no/playground/android_app/portal/member.php</item>
        <item>http://iaeste.no/playground/android_app/portal/jobraising.php?det1=android_iaeste</item>
        <item>http://iaeste.no/playground/android_app/kalender</item>
        <item>http://iaeste.no/playground/android_app_0001/update_0_9_4_2.d</item>
        <item>http://iaeste.no/playground/android_app/portal/news.php?det1=android_iaeste</item>
    </string-array>

    <string name="url_check_member">http://iaeste.no/playground/android_app/portal/check_member_2</string>
    <string name="url_pictures_member">https://www.iaeste.no/portal/files/casual/intern/profiles/</string>
    <string name="url_pictures_news">https://www.iaeste.no/portal/files/casual/intern/bulletins/</string>

    <string-array name="filename_list">
        <item>tmp_medlemmer.d</item>
        <item>tmp_bk.d</item>
        <item>tmp_kalender.d</item>
        <item>tmp_info.d</item>
        <item>tmp_news.d</item>
    </string-array>


    <string name="login_title">IAESTE Norge - Internapp</string>
    <string name="login_01">Vennligst logg inn</string>
    <string name="login_03">Brukernavn og passord, stemte ikke</string>
    <string name="login_04">Logget av...</string>
    <string name="login_05">Du er logget inn</string>
    <string name="login_06">Husk meg</string>
    <string name="login_07">Email</string>
    <string name="login_08">Passord</string>
    <string name="login_09">Logg inn</string>
    <string name="login_10">Hent Passord</string>
    <string name="login_11">Fyll ut alle feltene</string>
    <string name="login_12">Velkommen,</string>
    <string name="login_13">Logger inn.......</string>
    <string name="login_14">Sjekker.....</string>
    <string name="login_15">Jeg er glemsk!</string>
    <string name="login_16">Vennligst fyll ut feltene</string>
    <string name="login_17">Bruker eksisterer ikke</string>
    <string name="login_18">Mail sendt</string>
    <string name="login_19">Logget inn som:</string>
    <string name="login_20">Logg inn:</string>
    <string name="login_21">Brukernavn:</string>
    <string name="login_22">Brukernavn</string>
    <string name="login_23">Passord:</string>
    <string name="login_24">Logg ut (Reset)</string>
    <string name="login_25">Logg ut</string>
    <string name="login_26">Skriv inn riktig passord!</string>


    <string name="credits_01">Legg inn tips/forbedringer/bugs her:</string>
    <string name="credits_02">Om IAESTE appen</string>
    <string name="credits_03">I utviklingen til appen ble IntelliJ og Android SDK brukt.</string>
    <string name="credits_04">Vil gjerne nevne Gunnar Raaen (Fysikk, UiO) som lærte meg Java-programmering og hjalp meg mye med infrastrukturen, Matias Holte/Hans Martin (Tidligere LK Oslo/LK Oslo) som hjalp meg med å behandle data fra internsidene, tusen takk for all hjelpen! \n- Johan
    </string>
    <string name="credits_05">Utviklere:</string>
    <string name="credits_06">Johan Pires Bjørgen (LK Oslo)</string>
    <string name="credits_07">jpbjorgen@gmail.com</string>
    <string name="credits_08">Ta kontakt hvis du har tips til forbedringer eller lurer på noe.</string>
    <string name="credits_09">Info om versjonen</string>
    <string name="credits_10"></string>

    <string name="instilinnger_01">Innstillinger</string>
    <string name="instilinnger_02">Målform</string>
    <string name="instilinnger_03">Auto oppdatering av bilder (Medlemlister)</string>
    <string name="instilinnger_04">Lagre innstillinger</string>
    <string name="instilinnger_05">Lagret!</string>


    <string name="bk_topten_01">Gjennomsnittet er:</string>
    <string name="bk_topten_02">poeng per medlem</string>
    <string name="bk_topten_03"></string>
    <string name="bk_topten_04"></string>
    <string name="bk_topten_05"></string>


    <string name="loginkoble_01">Kobler seg til serveren......</string>



    <string name="update_info_older">- Mulighet å lagre kontakter \n - Fikset en bug i Android 2.X ver, \n - Lagt inn random bilder fra portalen \nDato:24.02.13
    </string>
        <string name="update_info_old"> - Oppdatert design \n- Dato: 06.08.15</string>
    <string name="update_info">- Oppdatert design: \n- Lagt til visning av bilder i    medlemsliste \n- Lagt til kalender \n- Nytt design på innloggingsskjerm \n- mye mer\n- Dato: 06.08.15</string>
    <string name="update_text_02">Oppdatere</string>

    <string name="pic_02">Personen har bildet, for å se det aktiver "Auto Bilde" i innstillinger</string>
    <string name="pic_03">Personen har ikke bilde</string>


    <string name="bk_01">Top 5 LK</string>
    <string name="bk_02">Din plassering</string>
    <string name="bk_03">Brukeren eksisterer ikke, vennligst prøv på nytt</string>
    <string name="bk_04">Din plassering:</string>

    <string name="bk_05">Du ligger på plassen</string>
    <string name="bk_06">av totalt</string>
    <string name="bk_07">medlemmer.</string>


    <string name="news_01">Nyheter</string>


    <string name="kalender_01">Sted:</string>
    <string name="kalender_02">Dato:</string>
    <string name="kalender_03">Lagre</string>
    <string name="kalender_04">Tilbake</string>
    <string name="kalender_05">Velg event</string>

    <string name="medlem_1">medlemmer</string>
    <string name="medlem_2">ble lagret i kontakter</string>
    <string name="medlem_3">Ring</string>
    <string name="medlem_4">Send SMS</string>
    <string name="medlem_5">Send mail</string>
    <string name="medlem_6">Lagre kontakt</string>


    <string name="lk_1">LK</string>

    <string name="soon">Fungerer ikke, kommer i nær fremtid</string>


    <string name="down_01">Laster ned data</string>
    <string name="version">Versjon:</string>
    <string name="ValgLK">IAESTE event</string>

    <string name="back">Tilbake</string>


    <string-array name="valg_LK">
        <item>Alle</item>
    </string-array>

    <string name="ValgMalform">Velg målform</string>

    <string-array name="malform">
        <item>Bokmål</item>
        <item>Nynorsk</item>
        <item>English</item>
    </string-array>

    <string-array name="string_BK">
        <item>Top10 og Top3 LK</item>
        <item>Agreements</item>
        <item>Min tabell</item>
    </string-array>

    <string-array name="string_main" translatable="false">
        <item>Sommerjobb</item>
        <item>Næringslivsdager</item>
        <item>Mottak</item>
        <item>Om IAESTE</item>
        <item>Intern</item>
    </string-array>

    <string-array name="string_main_intern">
        <item>BK</item>
        <item>Kalender</item>
        <item>Medlemslister</item>
    </string-array>


    <string-array name="string_LK">
        <item>Bergen</item>
        <item>Grimstad</item>
        <item>Oslo</item>
        <item>Trondheim</item>
        <item>Tromsø</item>
        <item>Stavanger</item>
        <item>Ås</item>
    </string-array>

    <string-array name="string_LK_BK">
        <item>Bergen</item>
        <item>Grimstad</item>
        <item>Oslo</item>
        <item>Stavanger</item>
        <item>Tromsø</item>
        <item>Trondheim</item>
        <item>Ås</item>
        <item>Nasjonalt</item>
    </string-array>


    <string-array name="string_kalender_events_weekends">
        <item>Arctic Week</item>
        <item>Bergen Weekend</item>
        <item>Oslo Weekend</item>
        <item>Mountain Week</item>
        <item>Trondheim Weekend</item>
        <item>Tromsø Weekend</item>
        <item>Stavanger Weekend</item>
    </string-array>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_home_nav">IAESTE Nyheter</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main__person">Main_Person</string>
    <string name="title_activity_main_testtestestest">MainTESTTESTESTEST</string>


</resources>