<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:elevation="2dp"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:id="@+id/relativeLayout2">


    <TextView
            android:id="@+id/text_innstillinger_malform"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/instilinnger_02"
            />

    <Spinner
            android:id="@+id/spinner_innstilliner_målform"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/ValgMalform"
            android:layout_below="@id/text_innstillinger_malform"
            />

    <CheckBox android:id="@+id/check_innstilinger_autoBildehusk"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/spinner_innstilliner_målform"
              android:text="@string/instilinnger_03"
              android:checked="true"

            />

    <Button android:id="@+id/button_innstillinger_lagre"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/instilinnger_04"
            android:layout_below="@id/check_innstilinger_autoBildehusk"
            android:layout_centerHorizontal="true"
            />

    <Button android:id="@+id/button_innstillinger_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_below="@id/button_innstillinger_lagre"
            android:visibility="gone"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Om appen"
            android:id="@+id/buttonOmOss"
            android:layout_below="@id/button_innstillinger_01"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


</RelativeLayout>