<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/popup_event"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"

        >

    <TextView
            android:id="@+id/text_popup_event_overskrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Overksrift"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"

            android:padding="10sp"
            android:visibility="gone"
            >
    </TextView>
    <TextView
            android:id="@+id/text_popup_event_sted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kalender_01"
            android:textSize="16sp"
            android:layout_below="@+id/text_popup_event_overskrift"
            android:layout_alignParentLeft="true"
            >
    </TextView>
    <TextView
            android:id="@+id/text_popup_event_dato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kalender_02"
            android:textSize="16sp"
            android:layout_below="@+id/text_popup_event_sted"
            android:layout_alignParentLeft="true"
            >
    </TextView>
    <TextView
            android:id="@+id/text_popup_evet_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5px"
            android:text="INFORMASJON"
            android:layout_below="@+id/text_popup_event_dato"
            android:layout_alignParentLeft="true"
            >
    </TextView>
    <Button
            android:id="@+id/button_popup_event_lagre"
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:padding="5px"
            android:text="@string/kalender_03"
            android:layout_below="@+id/text_popup_evet_info"
            android:visibility="gone"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true"
            >
    </Button>
    <Button
            android:id="@+id/button_popup_event_tilbake"
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:padding="5px"
            android:text="@string/kalender_04"
            android:layout_below="@+id/button_popup_event_lagre"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true"
            >
    </Button>
</RelativeLayout>
