<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="horizontal"
    android:fitsSystemWindows="true"
    android:id="@+id/login_layout">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_bg"/>

    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="32dp"
        android:background="@color/background">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/primary_material_light" />

        <TextView
            android:id="@+id/iaesteoverskrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="IAESTE Norge"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="64dp"
            android:background="@color/primary_material_light" />


    </RelativeLayout>

    <View
        android:id="@+id/circview"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignEnd="@+id/view"
        android:layout_alignTop="@+id/view"
        android:layout_marginEnd="-48dp"
        android:background="@drawable/shape_circular" />

    <ImageView
        android:id="@+id/iaesteLOGO"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignStart="@+id/circview"
        android:layout_alignTop="@+id/circview"
        android:padding="10dp"
        android:src="@drawable/iaesteorange_no_norway" />



        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="64dp"
            android:background="@drawable/shape_transparent"
            android:elevation="2dp"
            >


            <EditText
                android:id="@+id/username"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:gravity="center"
                android:hint="@string/login_07"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/password"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/login_08"
                android:inputType="textPassword"

                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/login_06"

                />

            <Button
                android:id="@+id/login"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/login_09"
                android:textSize="18sp"
                android:background="@drawable/shape_transparent"
                />

            <Button
                android:id="@+id/glemt_passord"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/login_10"
                android:textSize="18sp" />

            <Button
                android:id="@+id/glemsk_passord"

                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/glemt_passord"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/login_15"
                android:textSize="18sp"
                android:background="@drawable/shape_transparent"/>

            <Button
                android:id="@+id/back_passord"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/glemsk_passord"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/back"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/link_iaeste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/back_passord"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:text="www.iaeste.no"
                android:textSize="19sp">

            </TextView>

        </RelativeLayout>

</RelativeLayout>